--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "ahooks": "3.7.2",
     "axios": "0.27.2",
     "lodash.debounce": "4.0.8",
     "qs": "6.11.0",
